plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.esteco'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter:3.4.1'
    implementation 'org.springframework.boot:spring-boot-starter-test:3.4.1'
    implementation 'org.springframework.boot:spring-boot-starter-web:3.4.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.springframework.boot:spring-boot-starter-graphql:3.4.1'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.4.1'
    testImplementation 'com.h2database:h2:2.3.232'
    implementation 'org.postgresql:postgresql:42.7.4'
}

tasks.named('test') {
    useJUnitPlatform()
}
